--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,6 +1,6 @@
 {
-  "name": "rebcrypt",
-  "version": "0.1.0",
+  "name": "@ncthbrt/rebcrypt",
+  "version": "0.1.1",
   "sources": [
     "src",
     {
