add/improve package.json metadata

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@ncthbrt/rebcrypt",
+  "description": " Bindings for bcrypt in Reason",
   "version": "1.0.0",
   "scripts": {
     "build": "bsb -make-world",
@@ -10,9 +11,20 @@
     "clean": "bsb -clean-world",
     "prepublish": "yarn run build && yarn run test"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ncthbrt/rebcrypt.git"
+  },
   "keywords": [
-    "BuckleScript"
+    "reason",
+    "bucklescript",
+    "bcrypt",
+    "crypto"
   ],
+  "bugs": {
+    "url": "https://github.com/ncthbrt/rebcrypt/issues"
+  },
+  "homepage": "https://github.com/ncthbrt/rebcrypt#readme",
   "author": "",
   "license": "MIT",
   "devDependencies": {
